--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "prefer-stable": true,
     "require": {
         "php": ">=5.3.3",
-        "symfony/symfony": "3.0.*",
+        "symfony/symfony": "~3.1",
         "doctrine/orm": "~2.2,>=2.2.3",
         "doctrine/doctrine-bundle": "~1.2",
         "knplabs/knp-paginator-bundle": "2.4.*"
