--- a/Resources/config/services/forms-category.yml
+++ b/Resources/config/services/forms-category.yml
@@ -12,7 +12,7 @@ services:
         arguments:
             - %ccdn_forum_forum.entity.category.class%
             - %ccdn_forum_forum.entity.forum.class%
-            - @ccdn_forum_forum.component.helper.role
+            - "@ccdn_forum_forum.component.helper.role"
 
     ccdn_forum_forum.form.handler.category_create:
         class: %ccdn_forum_forum.form.handler.category_create.class%
