--- a/Resources/config/services/components.yml
+++ b/Resources/config/services/components.yml
@@ -20,7 +20,7 @@ services:
     ccdn_forum_forum.component.helper.role:
         class: %ccdn_forum_forum.component.helper.role.class%
         arguments:
-            - "@security.context"
+            - "@security"
             - %security.role_hierarchy.roles%
 
     #
