--- a/composer.json
+++ b/composer.json
@@ -15,26 +15,19 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": ">=5.3.3",
-        "symfony/symfony": "~3.1",
+        "php": ">=5.5.9",
+        "symfony/symfony": "^3.3",
         "doctrine/orm": "~2.2,>=2.2.3",
         "doctrine/doctrine-bundle": "~1.2",
-        "knplabs/knp-paginator-bundle": "2.6.*"
+        "knplabs/knp-paginator-bundle": "2.6.*",
+        "phpunit/phpunit": "^8.5"
     },
     "require-dev": {
         "symfony/swiftmailer-bundle": "~2.3",
         "symfony/monolog-bundle": "~2.4",
-        "doctrine/doctrine-fixtures-bundle": "dev-master",
-        "behat/behat": "2.5.*@stable",
-        "behat/mink": "v1.5.0",
-        "behat/mink-goutte-driver": "*",
-        "behat/mink-browserkit-driver": "*",
-        "behat/mink-selenium2-driver": "*",
-        "behat/mink-extension": "*",
-        "behat/symfony2-extension": "*",
-        "phpunit/phpunit": "3.7.*",
-        "raulfraile/ladybug-bundle": "dev-master",
-        "friendsofsymfony/user-bundle": "~2.0@dev"
+        "doctrine/doctrine-fixtures-bundle": "3.0.0",
+        "friendsofsymfony/user-bundle": "~2.0@dev",
+        "symfony/phpunit-bridge": "^5.2"
     },
     "suggest": {
         "codeconsortium/ccdn-component-common-bundle": "2.0.*@dev",
